<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="260dp"
    android:orientation="vertical"
    tools:context=".Fragments.UpdatePromptDialogFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:clipToPadding="false"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:adjustViewBounds="true"
                android:src="@drawable/yellow_and_black_cartoon_for_an_app_update_available"/>




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/lato"
                android:layout_marginTop="10dp"
                android:text="@string/to_use_this_app_please_update_to_the_latest_version"
                android:textSize="16sp" />

            <LinearLayout
                android:paddingBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnClose"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    app:cornerRadius="7dp"
                    android:fontFamily="@font/baloo_tamma_2_medium"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/yellow"
                    android:textStyle="bold"
                    android:text="@string/close" />

                <View
                    android:layout_width="8dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    app:cornerRadius="7dp"
                    android:backgroundTint="?attr/subtitle2"
                    android:textStyle="bold"
                    android:fontFamily="@font/baloo_tamma_2_medium"
                    android:text="@string/update"
                    android:textColor="?attr/curvedBackground2" />

            </LinearLayout>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

</FrameLayout>