<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/optionLayout"
    android:background="?attr/mainBackground"

    tools:context=".StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/fullstartpage"
       >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:orientation="vertical"
       android:gravity="center"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/luckiest_guy"
            android:gravity="center"
            android:text="GIGGLY"



            android:textColor="?attr/title2"
            android:textSize="80sp"
            android:textStyle="bold" />
<!--                <ImageView-->
<!--                    android:id="@+id/imageView2"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="410dp"-->
<!--        android:elevation="30dp"-->
<!--                    -->
<!--                   -->
<!--                    app:srcCompat="@drawable/__removebg_preview"-->
<!--                    app:tint="?attr/title2" />-->
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:backgroundTint="?attr/curvedBackground2"
            android:background="@drawable/topbothroundcornersdarkgrey"
            android:orientation="vertical"


            >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/baloo_tamma_2_medium"
                android:text="@string/WelcomeText"
                android:textAlignment="center"
                android:textColor="?attr/paragraph2"
                android:textSize="30sp"
                android:textStyle="bold" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp">

                <Button
                    android:id="@+id/signinBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    app:cornerRadius="7dp"
                    android:fontFamily="@font/lato"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/yellow"
                    android:textStyle="bold"
                    android:text="@string/signinText" />

                <Button
                    android:id="@+id/SignupBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    app:cornerRadius="7dp"
                    android:fontFamily="@font/lato"
                    android:backgroundTint="?attr/subtitle2"
                    android:textStyle="bold"
                    android:text="@string/signupText"
                    android:textColor="?attr/curvedBackground2" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="20dp"
android:textAlignment="center"
                android:fontFamily="@font/lato"
                android:textSize="10sp"
android:text="@string/WelcomeAboutText"
                android:textColor="?attr/startParagraph"
                 />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:id="@+id/toTerms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   android:layout_marginHorizontal="10dp"
                    android:textAlignment="center"
                    android:text="Terms Of Service"
                    android:textStyle="bold"
                    android:textSize="10sp"
                    android:fontFamily="@font/lato"
                    android:textColor="?attr/startParagraph"
                    />
                <TextView
                    android:id="@+id/toPriv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:textAlignment="center"
                    android:text="Privacy Policy"
                    android:textStyle="bold"
                    android:textSize="10sp"
                    android:fontFamily="@font/lato"
                    android:textColor="?attr/startParagraph"
                    />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>