<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="?attr/mainBackground"
    android:layout_height="match_parent"
    android:id="@+id/loginContainer"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <!-- Back button on the left -->
        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/down_arrow"
            android:contentDescription="@string/signinText"
            android:layout_gravity="start"

            app:tint="?attr/arrows2" />

        <!-- Register link on the right -->
        <TextView
            android:id="@+id/login_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signinText"
            android:textStyle="bold"

            android:textColor="?attr/subtitle2"
            android:layout_gravity="end"
            android:layout_marginEnd="30dp"
            android:paddingEnd="16dp"
            />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/baloo_tamma_2_medium"
            android:text="@string/signupText"
            android:textColor="?attr/title2"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="10dp"

            android:fontFamily="@font/lato"
            android:textColor="?attr/paragraph2"
            android:text="@string/SignupAboutText" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="@drawable/topbothroundcornersdarkgrey"
        android:elevation="20dp"
        android:backgroundTint="?attr/curvedBackground2"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:paddingTop="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/firstnameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="7dp"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="?attr/editTextBackground2"
                android:drawableLeft="@drawable/name_icon"
                android:drawablePadding="10dp"
                android:textColor="?attr/colorOnPrimary"
                android:drawableTint="@color/yellow"

                android:hint="First Name"
                android:textColorHint="?attr/colorOnPrimary"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:padding="15dp"
                android:textSize="12sp" />
            <EditText
                android:id="@+id/secondnameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="?attr/editTextBackground2"
                android:drawableLeft="@drawable/name_icon"
                android:drawablePadding="10dp"
                android:textColor="?attr/colorOnPrimary"
                android:drawableTint="@color/yellow"

                android:hint="Second Name"
                android:textColorHint="?attr/colorOnPrimary"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:padding="15dp"
                android:textSize="12sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/usernameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:backgroundTint="?attr/editTextBackground2"
            android:drawableLeft="@drawable/name_icon"
            android:layout_marginTop="15dp"
            android:drawablePadding="10dp"
            android:textColor="?attr/colorOnPrimary"
            android:drawableTint="@color/yellow"

            android:hint="Username"
            android:textColorHint="?attr/colorOnPrimary"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="15dp"
            android:textSize="12sp" />



        <EditText
            android:id="@+id/emailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_background"
            android:backgroundTint="?attr/editTextBackground2"
            android:drawableLeft="@drawable/email_icon"
            android:drawablePadding="10dp"
            android:textColor="?attr/colorOnPrimary"
            android:drawableTint="@color/yellow"

            android:hint="Email"
            android:textColorHint="?attr/colorOnPrimary"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="15dp"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/passwordRegister"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableTint="@color/yellow"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="?attr/editTextBackground2"
                android:textColorHint="?attr/editTextFont2"
                android:hint="Password"
                android:drawableLeft="@drawable/password_icon"
                android:inputType="textPassword"
                android:textSize="12sp"
                android:textColor="?attr/editTextFont2"
                android:drawablePadding="10dp"
                android:padding="15dp"
                android:layout_weight="9"
                android:imeOptions="actionDone" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="50dp"

                android:id="@+id/showpasswordbtn1"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/hide"
                android:padding="13dp"
                android:tint="?attr/paragraph2"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="?attr/editTextBackground2"

                android:layout_marginRight="3dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/passwordConfirmRegister"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableTint="@color/yellow"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="?attr/editTextBackground2"
                android:textColorHint="?attr/editTextFont2"
                android:hint="Confirm Password"
                android:drawableLeft="@drawable/password_icon"
                android:inputType="textPassword"
                android:textSize="12sp"
                android:textColor="?attr/editTextFont2"
                android:drawablePadding="10dp"
                android:padding="15dp"
                android:layout_weight="9"
                android:imeOptions="actionDone" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="50dp"

                android:id="@+id/showpasswordbtn2"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/hide"
                android:padding="13dp"
                android:tint="?attr/paragraph2"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="?attr/editTextBackground2"

                android:layout_marginRight="3dp"/>

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            app:strokeColor="@color/white"

            android:backgroundTint="?attr/buttons2"
            android:padding="15dp"
            android:textStyle="bold"
            android:text="@string/signupText"
            app:cornerRadius="7dp"
            android:textSize="15sp"
            android:textColor="?attr/buttonsText2" />






    </LinearLayout>




</LinearLayout>